--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,20 @@ Date: 2018-12-01
 Author: Anna Fergusson
 Maintainer: Anna Fergusson <a.fergusson@auckland.ac.nz>
 Description: A package that provides an interactive rmarkdown for exploring iNZight plots through an openCPU app.
-License: C0
+License: CC0
 Depends:
  knitr,
  iNZightPlots
+ Package: iNZightR
+Type: Package
+Title: Interactive rmarkdown app for exploring iNZight plots
+Version: 1.1
+Date: 2018-12-01
+Author: Anna Fergusson
+Maintainer: Anna Fergusson <a.fergusson@auckland.ac.nz>
+Description: A package that provides an interactive rmarkdown for exploring iNZight plots through an openCPU app.
+License: CC0
+Depends:
+ knitr,
+ iNZightPlots
+Additional_repositories: http://r.docker.stat.auckland.ac.nz/R
