--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,6 +11,6 @@ Depends:
  R,
  knitr,
  iNZightPlots,
- DT
+ nullabor
 Additional_repositories: http://r.docker.stat.auckland.ac.nz/R
 LazyData: true
