--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,6 +11,7 @@ Depends:
  R,
  knitr,
  iNZightPlots,
- ggthemes
+ ggthemes, 
+ rmarkdown
 Additional_repositories: http://r.docker.stat.auckland.ac.nz/R
 LazyData: true
