--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,8 +10,6 @@ License: CC0
 Depends:
  R,
  knitr,
- iNZightPlots,
- ggthemes, 
- rmarkdown
+ iNZightPlots
 Additional_repositories: https://r.docker.stat.auckland.ac.nz/
 LazyData: true
