--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,6 +12,8 @@ Depends:
  knitr,
  iNZightPlots,
  ggthemes,
- magick
+ magick,
+ rvest,
+ tidytext
 Additional_repositories: https://r.docker.stat.auckland.ac.nz/
 LazyData: true
