--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,6 +17,7 @@ Depends:
  tidytext,
  jsonlite,
  stringr,
- dplyr
+ dplyr,
+ purrr
 Additional_repositories: https://r.docker.stat.auckland.ac.nz/
 LazyData: true
